/*
 * $Id: ChangeLog,v 1.304 2006-12-17 04:09:23 guerra000 Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2006-12-16 22:08 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * include/i_textbox.ch
  * source/h_textbox.prg
    * Unified TEXTBOX definition to a single function. All TEXTBOX's
      clauses are now optional, and they could be in any order.

2006-12-14 22:02 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_windows.prg
    * Checks for a better modal's previous window detection.

2006-12-08 21:45 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_editbox.prg
    - Removed ::SETFOCUS() method. It will assume ::Super (TText)
      method.
  * source/h_controlmisc.prg
  * source/h_datepicker.prg
  * source/h_textbox.prg
  * source/h_tree.prg
    * Moved ::lSettingFocus property to TControl functionality.
    - Some (duplicated from TControl) ::Events_Enter() methods
      removed.

2006-12-05 23:21 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_controlmisc.prg
    ! Added missing Form.Grid.Cell() syntax functionality.
  * include/i_graph.ch
  * source/c_graph.c
  * source/h_graph.prg
    + DRAW TEXT command added. Idea borrowed from HMG Experimental.

2006-12-02 12:24 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_grid.prg
    ! Fixed ::SetItemCount() when no items were defined.
  * source/h_textbox.prg
    ! Added ::RefreshData() to ::Refresh() method.

2006-11-26 16:40 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * include/i_status.ch
    ! Fixed DATE "item" definition.
    + SUBCLASS clause added.
  * include/i_timer.ch
  * source/h_timer.prg
    + SUBCLASS clause added.
    + DISABLED clause added.

2006-11-25 09:24 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_status.prg
    ! Fixed STATUSBAR's container implementation.